# CHIP-8

./: .clang-format  CMakeLists.txt  README.md
src/: interpreter.cpp  interpreter.hpp  main.cpp
tests/: main.cpp
